--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "homepage": "http://http://www.mangopay.com/",
     "license": "MIT",
     "require-dev": {
-        "php" : ">=5.0.0",
+        "php" : ">=5.0.0"
     },
     "autoload": {
         "psr-4": { "MangoPay": "" }
