--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         "php" : ">=5.0.0"
     },
     "autoload": {
-        "psr-0": { "MangoPay": "" }
+        "psr-0": { "MangoPay": "MangoPaySDK/" }
     },
-    "target-dir": "MangoPaySDK",
     "minimum-stability": "dev"
 }
