--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "php": ">=5.5.0",
         "ext-curl": "*",
-        "ext-openssl": "*"
+        "ext-openssl": "*",
+        "psr/log": "^1.0"
     },    
     "autoload": {
         "psr-4": { "MangoPay\\": "" },
