--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
         "psr/log": "^1.0"
     },    
     "autoload": {
-        "psr-4": { "MangoPay\\": "" },
-        "files": ["MangoPay/Autoloader.php"]
+        "psr-4": { "MangoPay\\": "MangoPay/" }
     }
 }
