--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ php:
   - 5.6
   
 install: composer install --dev
-script: cd /tests/suites/ && phpunit all.php
+script: cd tests/suites/ && phpunit all.php
