--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,16 @@
 {
     "name": "mangopay/php-sdk-v2",
     "description": "SDK PHP for Mangopay api V2",
+    "version": "2.4.4",
     "minimum-stability": "stable",
     "license": "MIT",
     "require": {
         "php": ">=5.4.0",
         "ext-curl": "*",
         "ext-openssl": "*",
-        "psr/log": "^1.0"
-    },    
+        "psr/log": "^1.0",
+        "mangopay/php-sdk-v2": "^2.3"
+    },
     "autoload": {
         "psr-4": { "MangoPay\\": "MangoPay/" }
     }
