--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ language: php
 
 php:
   - 5.4
-  - 5.5
-  - 5.6
+#  - 5.5
+#  - 5.6
 
 before_install:
   - sudo apt-get -y install git zip php5-cli php5-curl
@@ -17,4 +17,4 @@ before_script:
   - composer self-update
   - composer install --no-interaction
 
-script: cd tests/suites/ && php all.php
+script: cd tests/cases/ && php wallets.php
