--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ before_script:
   - composer self-update
   - composer install --no-interaction
 
-script: cd tests/cases/ && php all.php
+script: cd tests/suites/ && php all.php
