Update simpletest dependency

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
     },
     "autoload": {
         "psr-4": { "MangoPay\\": "MangoPay/" }
+    },
+    "require-dev": {
+        "simpletest/simpletest": "^1.1"
     }
 }
