--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,5 @@ before_script:
   - composer self-update
   - composer install --no-interaction
 
-script: cd tests/suites/ && php all.php
+script: .\vendor\bin\phpunit --bootstrap .\vendor\autoload.php  .\tests\cases\
+
