--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ before_script:
   - composer self-update
   - composer install --no-interaction
 
-script: .\vendor\bin\phpunit --bootstrap .\vendor\autoload.php  .\tests\cases\
+script: ./vendor/bin/phpunit --bootstrap ./vendor/autoload.php  ./tests/cases/
 
