--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,6 @@
         "psr-4": { "MangoPay\\": "MangoPay/" }
     },
     "require-dev": {
-        "phpunit/phpunit": "5.7"
+        "phpunit/phpunit": "^4"
     }
 }
