Added Cases namespace to tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_script:
   - php -r "printf('PHP %s', phpversion());"
   - composer self-update
   - composer install --no-interaction
+  - composer dumpautoload -o
 
 script: ./vendor/bin/phpunit
 
