Added -o param to composer install command Removed imports of vendor autoload file

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ php:
 before_script:
   - php -r "printf('PHP %s', phpversion());"
   - composer self-update
-  - composer install --no-interaction
-  - composer dumpautoload -o
+  - composer install --no-interaction -o
 
 script: ./vendor/bin/phpunit
 
