--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8.36 || ^5.7.27 || 7.3"
+    "phpunit/phpunit": "^4.8.36 || ^5.7.27 || 7.3",
+    "ext-mysql_xdevapi": "*"
   }
 }
