--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,6 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8.36 || ^5.7.27 || 7.3",
-    "ext-mysql_xdevapi": "*"
+    "phpunit/phpunit": "^4.8.36 || ^5.7.27 || 7.3"
   }
 }
