--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "php": ">=5.4.0",
     "ext-curl": "*",
     "ext-openssl": "*",
-    "psr/log": "^1.0"
+    "psr/log": "^1.0",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {
