--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: false
 
-dist: trusty
+dist: xenial
 
 language: php
 
@@ -8,9 +8,10 @@ php:
 #  - 5.6
 #  - 7.0
 #  - 7.1
-  - 7.2
+#  - 7.2
 #  - 7.3
 #  - 7.4
+  - 8.0
 
 before_script:
   - php -r "printf('PHP %s', phpversion());"
