--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ before_script:
   - composer self-update
   - composer install --no-interaction -o
 
-script: ./vendor/bin/phpunit --debug
+script: ./vendor/bin/phpunit
