--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ php:
 before_script:
   - php -r "printf('PHP %s', phpversion());"
   - composer self-update
-  - composer install --no-interaction -o
+  - composer install --no-interaction -o --ignore-platform-reqs
 
-script: ./vendor/bin/phpunit --debug
+script: ./vendor/bin/phpunit
