Fix syntax for tests workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,7 @@ jobs:
             - name: Install dependencies
               run: composer install --no-interaction ${{ matrix.composer-options }}
             - name: Apply phpunit patches
-              if: "${{ matrix.php-version }}" != "5.6"
+              if: ${{ matrix.php-version != '5.6' }}
               run: ./tests/apply-phpunit-patches.sh
             - name: Run php tests
               run: ./vendor/bin/phpunit
