--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7.27 || ^7.3 || ^8 || ^9",
+    "phpunit/phpunit": ">=5.7.27 <10",
     "friendsofphp/php-cs-fixer": "^2.18"
   }
 }
