disable pipelines for php<7.2

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: ["5.6", "7.1", "7.2", "7.3", "7.4", "8.0"]
+        php-version: ["7.3", "7.4", "8.0"]
         os: [ubuntu-latest]
         experimental: [false]
         composer-options: ['']
